Doc/transfers (#51)
* feat(transfer): mapper, padronização camelCase e documentação Swagger

* feat(tanks): rota GET tanks/without-batches para tanques sem lotes

* doc: atualização de documentação
